unpackaged/main/default/objects/Secteur__c/Secteur__c.object-meta.xml
<CustomObject>
    <label>Secteur</label>
    <nameField>
        <label>Nom du Secteur</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secteurs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>