unpackaged/main/default/objects/Secteur__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial / KAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Representants_Territoires</relationshipName>
    <type>Lookup</type>
</CustomField>