unpackaged/main/default/objects/Secteur__c/fields/Manager_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Manager_Commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Commercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Secteurs</relationshipName>
    <type>Lookup</type>
</CustomField>