unpackaged/main/default/objects/Secteur__c/fields/Organisation_Commerciale__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Commerciale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation Commerciale</label>
    <referenceTo>SalesArea__c</referenceTo>
    <relationshipName>Representants_Territoires</relationshipName>
    <type>Lookup</type>
</CustomField>