unpackaged/main/default/objects/Secteur__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Organisation_Commerciale__c</columns>
    <columns>NAME</columns>
    <columns>Commercial__c</columns>
    <columns>Manager_Commercial__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>