unpackaged/main/default/objects/Secteur__c/listViews/Reways.listView-meta.xml
<ListView>
    <fullName>Reways</fullName>
    <columns>NAME</columns>
    <columns>Organisation_Commerciale__c</columns>
    <columns>Commercial__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Reways</value>
    </filters>
    <label>Reways</label>
</ListView>